--- a/data/package.json
+++ b/data/package.json
@@ -17,6 +17,7 @@
     "sequelize": "^7.0.0-alpha.2",
     "sequelize-cli": "^6.3.0",
     "url": "^0.11.0",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "youtube-node": "^1.3.3"
   }
 }
