--- a/data/package.json
+++ b/data/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio-httpcli": "^0.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
@@ -17,6 +18,7 @@
     "sequelize": "^7.0.0-alpha.2",
     "sequelize-cli": "^6.3.0",
     "url": "^0.11.0",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "youtube-node": "^1.3.3"
   }
 }
