--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
 #           yarn build
 
       - name: zip distributions
-        run: zip -r home/ubuntu/zip.zip ./client/dist ./server ./appspec.yml ./scripts
+        run: zip -r zip.zip ./client/dist ./server ./appspec.yml ./scripts
 
       - name: AWS configure credentials
         uses: aws-actions/configure-aws-credentials@v1
