--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,18 @@
 version: 0.0
 os: linux
 files:
-  - source:  /
-    destination: /home/ubuntu/build/
+  - source: /
+    destination: /home/ubuntu/build
+    overwrite: yes
+
+permissions:
+  - object: /home/ubuntu
+    pattern: '**'
+    owner: ubuntu
+    group: ubuntu
+
+hooks:
+  AfterInstall:
+    - location: scripts/after-deploy.sh
+      timeout: 180
+      runas: ubuntu
