--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: deploy with AWS codeDeploy
         run: aws deploy create-deployment
-          --application-name zip-deployment
+          --application-name zip-codedeploy
           --deployment-config-name CodeDeployDefault.OneAtOnce
-          --deployment-group-name zip-deployment
+          --deployment-group-name zip-codedeploy
           --s3-location bucket=together-zip,bundleType=zip,key=public/together-zip.zip
