--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/zip
+    destination: /home/ubuntu/build
     overwrite: yes
 
 permissions:
