--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: build file
-        run: npm run build
+      # - name: build file
+      #   run: npm run build
 
       - name: create env file
         run: |
