--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,28 +27,21 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # - name: delete package-lock.json
-      #   run: rm package-lock.json
+      - name: delete package-lock.json
+        run: rm package-lock.json
 
       - name: Install dependencies
         run: npm install
 
-      # - name: build file
-      #   run: npm run build
+      - name: build file
+        run: npm run build
 
       - name: create env file
-        run: |
-          mkdir secret
-          cd secret
-          touch .env.development
-          cat << EOF >> .env.development
+        working-directory: ./server
+        run: 
+          touch .env
+          cat << EOF >> .env
           ${{ secrets.ENV }}
-          EOF
-          cd ../
-
-      - name: Make tar file
-        run: tar -cpvzf ./$GITHUB_SHA.tgz *
-        shell: bash
 
       - name: zip distributions
         run: zip -r together-zip.zip ./client/dist ./server ./appspec.yml ./scripts
