--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: delete package-lock.json
-        run: rm package-lock.json
+      # - name: delete package-lock.json
+      #   run: rm package-lock.json
 
       - name: Install dependencies
         run: npm install
 
-      - name: build file
-        run: npm run build
+      # - name: build file
+      #   run: npm run build
 
       - name: create env file
         working-directory: ./server
