--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,4 +62,4 @@ jobs:
           --application-name zip-codedeploy
           --deployment-config-name CodeDeployDefault.OneAtATime
           --deployment-group-name zip-codedeploy
-          --s3-location bucket=together-zip,bundleType=zip,key=public/together-zip_$IMAGE_TAG.zip
+          --s3-location bucket=together-zip,bundleType=zip,key=public/together-zip.zip
