--- a/data/package.json
+++ b/data/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "cheerio-httpcli": "^0.8.2",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2",
     "puppeteer": "^13.0.1",
     "request": "^2.88.2",
     "sequelize": "^7.0.0-alpha.2",
